swiftyPOPL/test/should_pass/default_parameter_label.swift
func id(x: Int) -> Int { x }

id(x: 1)
