swiftyPOPL/test/should_fail/default_parameter_label_requires_label.swift
func id(x: Int) -> Int { x }

id(1)
